--- a/4 slicing tailwind/index.html
+++ b/4 slicing tailwind/index.html
@@ -51,9 +51,9 @@
 
       <div class="container mx-auto px-4">
         <!-- ROW -->
-        <div class="grid lg:grid-cols-2 lg:mt-40 mt-4 sm:grid-cols-1">
+        <div class="grid grid-cols-12 lg:mt-40 mt-16">
           <!-- COL -->
-          <div class="py-4 md:pr-24">
+          <div class="py-4 md:pr-24 lg:col-span-6 col-span-12">
             <h1 class="md:text-5xl text-2xl font-bold">Build your networking by join our community event</h1>
             <p class="md:text-base text-xs lg:my-10 my-5">We are internatonal organization which brings together all sectors of the travel and tourism industry. Representing the insdustry's managers and executives</p>
             <div>
@@ -64,12 +64,12 @@
             </div>
           </div>
           <!-- COL -->
-          <div class="xl:pl-28 lg:grid lg:pl-4 lg:mt-0 mt-14">
-            <div class="lg:text-start text-center">
+          <div class="xl:pl-28 lg:pl-4 lg:mt-0 mt-14 lg:col-span-6 col-span-12">
+            <div class="lg:text-start text-center mb-6">
               <button class="bg-fourth px-3 rounded-full lg:w-48 md:text-base text-sm md:py-0 h-9">Our upcoming event</button>
             </div>
 
-            <div class="lg:mt-4 mt-8 flex gap-2 sm:text-base text-sm">
+            <div class="flex gap-2 sm:text-base text-sm">
               <div class="card bg-fifth rounded-xl overflow-hidden shadow-lg">
                 <img src="asset/img/1.jpg" alt="" class="w-full" />
                 <div class="sm:px-8 px-2 py-5">
