--- a/4 slicing tailwind/index.html
+++ b/4 slicing tailwind/index.html
@@ -51,7 +51,7 @@
 
       <div class="container mx-auto px-4">
         <!-- ROW -->
-        <div class="grid grid-cols-12 lg:mt-40 mt-16">
+        <div class="grid grid-cols-12 lg:mt-40 sm:mt-16 mt-10">
           <!-- COL -->
           <div class="py-4 md:pr-24 lg:col-span-6 col-span-12">
             <h1 class="md:text-5xl text-2xl font-bold">Build your networking by join our community event</h1>
