review grid cols

--- a/4 slicing tailwind/index.html
+++ b/4 slicing tailwind/index.html
@@ -51,9 +51,9 @@
 
       <div class="container mx-auto px-4">
         <!-- ROW -->
-        <div class="grid grid-cols-12 lg:mt-40 sm:mt-16 mt-10">
+        <div class="grid grid-cols-12 gap-8 lg:mt-40 sm:mt-16 mt-10">
           <!-- COL -->
-          <div class="py-4 md:pr-24 lg:col-span-6 col-span-12">
+          <div class="py-4 lg:col-span-5 leading-[57px] col-span-12">
             <h1 class="md:text-5xl text-2xl font-bold">Build your networking by join our community event</h1>
             <p class="md:text-base text-xs lg:my-10 my-5">We are internatonal organization which brings together all sectors of the travel and tourism industry. Representing the insdustry's managers and executives</p>
             <div>
@@ -64,7 +64,7 @@
             </div>
           </div>
           <!-- COL -->
-          <div class="xl:pl-28 lg:pl-4 lg:mt-0 mt-14 lg:col-span-6 col-span-12">
+          <div class="lg:mt-0 mt-14 lg:col-start-8 lg:col-span-5 col-span-12">
             <div class="lg:text-start text-center mb-6">
               <button class="bg-fourth px-3 rounded-full lg:w-48 md:text-base text-sm md:py-0 h-9">Our upcoming event</button>
             </div>
