add fiture loader and, when refresh page still get data movies

--- a/javascript async/movies search application/index.html
+++ b/javascript async/movies search application/index.html
@@ -30,6 +30,8 @@
 
       <!-- end form search -->
 
+      <div id="loader" class="text-center mt-5">Loading...</div>
+
       <!-- <div class="main" id="main">
         <div class="row">
           <div class="movie col col-md-3 col-sm-6 col-12 my-5">
