--- a/javascript async/movies search application/index.html
+++ b/javascript async/movies search application/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Movies search</title>
+    <link rel="stylesheet" href="style.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
   </head>
   <body>
@@ -30,7 +31,12 @@
 
       <!-- end form search -->
 
-      <div id="loader" class="text-center mt-5">Loading...</div>
+      <div id="loader" class="text-center mt-5">
+        Loading...
+        <div class="spinner">
+          <div class="circle"></div>
+        </div>
+      </div>
 
       <!-- <div class="main" id="main">
         <div class="row">
